# ark-snarkjs

./: Cargo.toml  README.md
src/: export_proof.rs  export_vk.rs  lib.rs  snarkjs_common.rs
tests/: Mimc.rs  MulCircuit.rs  MulCircuitBN254.rs
